<resources>
    <string name="app_name">RickAndMorty</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="character_details_status">Status</string>
    <string name="character_details_gender">Gender</string>
    <string name="character_details_species">Species</string>
    <string name="character_details_origin">Origin</string>
    <string name="character_details_last_seen_location">Last seen location</string>
    <string name="character_details_last_seen_episode_name">Last seen episode name</string>
    <string name="character_details_number_of_episode">Number of episodes</string>
    <string name="action_bar_title">OBSS Rick And Morty challenge</string>
    <string name="action_bar_list_title">LIST</string>
    <string name="action_bar_grid_title">GRID</string>
    <string name="search_bar_hint_title">Name or Status</string>

</resources>